spacing bugfixes

--- a/src/components/fps/dataentry/spacing/spacing.module.less
+++ b/src/components/fps/dataentry/spacing/spacing.module.less
@@ -1,4 +1,5 @@
 .spacingWrapper {
+    width: 250px;
     .margin {
         border-top: solid 30px #c1d2df;
         border-bottom: solid 30px #c1d2df;
